refactor: use CSS class for concluida, remove text node spacers, add label for accessibility

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <h1>Minha Lista de Tarefas</h1>
 
     <form id="form-tarefa">
-        <input type="text" id="input-tarefa" placeholder="Digite uma tarefa">
+        <label for="input-tarefa" class="sr-only">Tarefa</label>
+        <input type="text" id="input-tarefa" placeholder="Digite uma tarefa" aria-label="Tarefa">
         <button type="submit">Adicionar</button>
     </form>
 
